# Hedgehog

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  hhg.toml
.github/workflows/: astro.yml  pages.yml
HedgehogStdLib/: hstdlib.cpp  hstdlib.h  hstdlib.ipp  main.cpp
docs/: keywords.md  main.md
hstdlib/: CMakeLists.txt
hstdlib/lib/: hstdlib.h
hstdlib/src/: hstdlib.h  hstdlib.ipp
include/: build.h  cfg.h  clean.h  cmd_args.h  cmd_exec.h  code_gen.h  cpp_gen.h  debug.h  driver.h  error.h  ext_build.h  file_pos.h  file_range.h  file_src.h  init.h  lexer.h  main.h  mem.h  mir.h  mir_gen.h  msg.h  node.h  parser.h  qbe_gen.h  repl.h  run.h  sem_an.h  str.h  sym.h  sym_tab.h  token.h  type.h  type_ctx.h  utils.h
lib/: README.md  arena.h  fs.h  stb_ds.h  toml.h
lib/minunit/: minunit.h
lib/stb/: stb_ds.h
src/: build.c  cfg.c  clean.c  cmd_args.c  cmd_exec.c  code_gen.c  cpp_gen.c  debug.c  debug.h  driver.c  error.c  error.cpp  ext_build.c  file_pos.c  file_range.c  file_src.c  init.c  lexer.c  lexer.cpp  main.c  main.cpp  mem.c  mir.c  mir_gen  mir_gen.c  msg.c  node.c  parser.c  qbe_gen.c  repl.c  run.c  sem_an.c  str.c  sym.c  sym_tab.c  token.c  token.cpp  type.c  type_ctx.c  utils.c
stdlib/core/: cell.hhg  info.hhg  interfaces.hhg  mem.hhg
stdlib/std/: alloc.hhg  cell.hhg  collections.hhg  fs.hhg  info.hhg  interfaces.hhg  math.hhg  mem.hhg  os.hhg  random.hhg  std.hhg
test/: CMakeLists.txt
test/include/: unit.h
test/src/: test.c  test_fuzz.c  test_prog.c  test_sym_tab.c
test/testcases/: array.hhg  class.hhg  float.hhg  fmt.hhg  for.hhg  for_range.hhg  func.hhg  func_call.hhg  if.hhg  print.hhg  test.hhg  typed_variable.hhg  var.hhg  variable.hhg
test/testcases/lexer/valid/comment/: comment.hhg
test/testcases/lexer/valid/float_literal/: float_literal.hhg
test/testcases/lexer/valid/int_literal/: int_literal.hhg
test/testcases/lexer/valid/operators/: operators.hhg
test/testcases/lexer/valid/string/: string.hhg
test/testcases/parser/invalid/missing_brace/: missing_brace.hhg
test/testcases/parser/invalid/missing_paren/: missing_paren.hhg
test/testcases/parser/valid/arith/: arith.hhg
test/testcases/parser/valid/array/: array.hhg
test/testcases/parser/valid/block_expr/: block_expr.hhg
test/testcases/parser/valid/bool_expr/: bool_expr.hhg
test/testcases/parser/valid/break_continue/: break_continue.hhg
test/testcases/parser/valid/cast/: cast.hhg
test/testcases/parser/valid/class/: class.hhg
test/testcases/parser/valid/compound_assign/: compound_assign.hhg
test/testcases/parser/valid/const_decl/: const_decl.hhg
test/testcases/parser/valid/dec/: dec.hhg
test/testcases/parser/valid/enum/: enum.hhg
test/testcases/parser/valid/false/: false.hhg
test/testcases/parser/valid/float/: float.hhg
test/testcases/parser/valid/fmt/: fmt.hhg
test/testcases/parser/valid/fn_return/: fn_return.hhg
test/testcases/parser/valid/for/: for.hhg
test/testcases/parser/valid/for_range/: for_range.hhg
test/testcases/parser/valid/func/: func.hhg
test/testcases/parser/valid/func_call/: func_call.hhg
test/testcases/parser/valid/if/: if.hhg
test/testcases/parser/valid/import/: import.hhg
test/testcases/parser/valid/inc/: inc.hhg
test/testcases/parser/valid/int/: int.hhg
test/testcases/parser/valid/interface/: interface.hhg
test/testcases/parser/valid/labels/: labels.hhg
test/testcases/parser/valid/let_mut/: let_mut.hhg
test/testcases/parser/valid/match/: match.hhg
test/testcases/parser/valid/references/: references.hhg
test/testcases/parser/valid/tagged_union/: tagged_union.hhg
test/testcases/parser/valid/templates/: templates.hhg
test/testcases/parser/valid/true/: true.hhg
test/testcases/parser/valid/type_alias/: type_alias.hhg
test/testcases/parser/valid/typed_var/: typed_var.hhg
test/testcases/parser/valid/unsafe/: unsafe.hhg
test/testcases/parser/valid/var/: var.hhg
test/testcases/parser/valid/while/: while.hhg
test/testcases/sem_an/invalid/undefined_fn/: undefined_fn.hhg
test/testcases/sem_an/invalid/undefined_var/: undefined_var.hhg
test/testcases/sem_an/valid/fn_call/: fn_call.hhg
test/testcases/sem_an/valid/var_use/: var_use.hhg
web/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
web/pixel_art_hedgehog/: hedgehog.ase
web/src/: content.config.ts
web/src/components/: CodeWindow.astro  DocsSidebar.astro  Footer.astro  Header.astro  HedgehogCursor.astro  SpikeDivider.astro  ThemeToggle.astro
web/src/content/: config.ts
web/src/content/docs/: 01-introduction.md  02-variables.md  03-types.md  04-operators.md  05-control-flow.md  06-collections.md  07-functions.md  08-classes.md  09-memory.md  10-tagged-unions.md  11-stdlib.md
web/src/layouts/: BaseLayout.astro  DocsLayout.astro
web/src/lib/: consts.ts  hhg-grammar.js  nav.ts
web/src/pages/: index.astro  playground.astro
web/src/pages/docs/: [...slug].astro  index.astro
web/src/styles/: global.css
